--- a/scai/dmemo/test/CMakeLists.txt
+++ b/scai/dmemo/test/CMakeLists.txt
@@ -80,9 +80,14 @@ endif ( WIN32 )
 ### Copy the README and xmltest.sh file in build directory ### 
 
 file ( COPY README DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
-file ( COPY xmltest.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} ) 
+file ( COPY xmltest.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} FILE_PERMISSIONS ${PROJECT_FILE_PERMISSIONS} ) 
 
 if ( USE_CODE_COVERAGE )
-    configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}/code_coverage.sh" @ONLY)
-    configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/../../scai_code_coverage_functions.sh" "${CMAKE_CURRENT_BINARY_DIR}/" @ONLY)
+    configure_file( "${CMAKE_CURRENT_SOURCE_DIR}/code_coverage.sh.in" "${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/code_coverage.sh" @ONLY)
+    file ( COPY ${CMAKE_CURRENT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/code_coverage.sh 
+           DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
+           FILE_PERMISSIONS ${PROJECT_FILE_PERMISSIONS} )
+    file ( COPY ${CMAKE_CURRENT_SOURCE_DIR}/../../scai_code_coverage_functions.sh 
+           DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
+           FILE_PERMISSIONS ${PROJECT_FILE_PERMISSIONS} )
 endif ( USE_CODE_COVERAGE )
