Update of loop macro, now for 3 levels

--- a/scai/common/macros/CMakeLists.txt
+++ b/scai/common/macros/CMakeLists.txt
@@ -37,7 +37,7 @@ scai_project(
         instantiate
         print_string
         throw
-        typeloop
+        loop
         unique_name
         unused
 
