--- a/scai/logging/test/make.inc.in
+++ b/scai/logging/test/make.inc.in
@@ -27,6 +27,7 @@
  # @date 03.09.2015
 ###
 
+SCAI_ROOT="${CMAKE_INSTALL_PREFIX}"
 INCLUDE_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../.."
 CXX=${CMAKE_CXX_COMPILER}
 CXX_FLAGS=${SCAI_LANG_FLAGS}
