--- a/scai/dmemo/examples/CMakeLists.txt
+++ b/scai/dmemo/examples/CMakeLists.txt
@@ -41,11 +41,13 @@ file( COPY run_all.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
 include ( Functions/prepareExamplesMakeInc )
 prepareExamplesMakeInc()
 configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../examples_make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/make.inc" )
+configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../examples_Makefile.in" "${CMAKE_CURRENT_BINARY_DIR}/install_Makefile" COPYONLY )
 
 ## install examples
-install ( FILES ${EXAMPLE_FILES} README ${CMAKE_CURRENT_BINARY_DIR}/make.inc DESTINATION ${PROJECT_EXAMPLE_DIR} )
-install ( PROGRAMS run_all.sh DESTINATION ${PROJECT_EXAMPLE_DIR} )
+install ( FILES       ${EXAMPLE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/make.inc
+          DESTINATION ${PROJECT_EXAMPLE_DIR} )
+install ( PROGRAMS    run_all.sh
+          DESTINATION ${PROJECT_EXAMPLE_DIR} )
+install ( FILES       "${CMAKE_CURRENT_BINARY_DIR}/install_Makefile"
+          DESTINATION "${CMAKE_INSTALL_PREFIX}/${PROJECT_EXAMPLE_DIR}/Makefile"  )
 
-# install Makefile
-configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/../../examples_Makefile.in"
-				 "${CMAKE_INSTALL_PREFIX}/${PROJECT_EXAMPLE_DIR}/Makefile" COPYONLY )
