generic makefiles for examples did not include open MP flag for linking

--- a/scai/examples_Makefile.in
+++ b/scai/examples_Makefile.in
@@ -1,14 +1,14 @@
 include make.inc
 
+INCLUDE_FLAGS = -I${SCAI_ROOT}/include
+
 ifdef SCAI_BOOST_INCLUDE_DIR
-    BOOST_INCLUDE = -I${SCAI_BOOST_INCLUDE_DIR}
+    INCLUDE_FLAGS += -I${SCAI_BOOST_INCLUDE_DIR}
 endif
 
 ifdef SCAI_CUDA_INCLUDE_DIR
-    CUDA_INCLUDE = -I${SCAI_CUDA_INCLUDE_DIR}
+    INCLUDE_FLAGS += -I${SCAI_CUDA_INCLUDE_DIR}
 endif
-
-INCLUDE_FLAGS = -I${SCAI_ROOT}/include ${BOOST_INCLUDE} ${CUDA_INCLUDE}
 
 ifdef ADDITIONAL_EXAMPLE_LINK_LIBRARIES
 	LINK_LIBRARY = -l${ADDITIONAL_EXAMPLE_LINK_LIBRARIES}
@@ -32,7 +32,7 @@ All: ${M_SO} ${SCAI_EXECUTABLES} ${SCAI_MODULES}
 .SUFFIXES: .o .so
 
 .o.exe: 
-	${CXX} -o $*.exe $*.o ${MODULE_LIB} ${LD_FLAGS}:$(CURDIR)
+	${CXX} -o $*.exe $*.o ${MODULE_LIB} ${CXX_FLAGS} ${LD_FLAGS}:$(CURDIR)
 
 .o.so:
 	${CXX} -o lib$*.so $*.o ${LD_FLAGS} -shared
