Some example cmake configurations were not okay.

--- a/scai/solver/test/CMakeLists.txt
+++ b/scai/solver/test/CMakeLists.txt
@@ -65,7 +65,12 @@ scai_project (
         
    )
    
+### set include directories ###
+
+include_directories ( ${SCAI_BOOST_INCLUDE_DIR} )
+
 ### add definitions ###
+
 add_definitions ( -DLAMA_TESTFILE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../../../res/testfiles" )
    
 add_executable ( solverTest ${CXX_SOURCES} )
