update on head docu

--- a/scai/solver/examples/CMakeLists.txt
+++ b/scai/solver/examples/CMakeLists.txt
@@ -36,7 +36,7 @@ add_subdirectory ( lecture )
 if ( ${SCAI_LIBRARY_TYPE} MATCHES SHARED )
     add_subdirectory ( myJacobi )
 endif ( ${SCAI_LIBRARY_TYPE} MATCHES SHARED )
-add_subdirectory ( solver )
+#add_subdirectory ( solver )
 add_subdirectory ( spy )
 
 file( COPY run_all.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
