--- a/scai/common/exception/CMakeLists.txt
+++ b/scai/common/exception/CMakeLists.txt
@@ -38,6 +38,7 @@ scai_project(
 
         AssertException
         Exception
+        IOException
         NotSupportedValueTypeException
         UnsupportedException
 
