IOStream now in LAMA core, test added

--- a/scai/lama/io/CMakeLists.txt
+++ b/scai/lama/io/CMakeLists.txt
@@ -38,10 +38,10 @@ scai_project (
 
     CLASSES
         
-        mmio
         XDRFileStream
         IOUtils
         FileStream
+        IOStream
 
     HEADERS
 
