--- a/scai/lama/examples/io/CMakeLists.txt
+++ b/scai/lama/examples/io/CMakeLists.txt
@@ -37,11 +37,10 @@ set ( EXAMPLE_FILES matrixConvert.cpp vectorConvert.cpp
           MatlabIO.cpp MatlabIO.hpp 
           MatrixMarketIO.cpp MatrixMarketIO.hpp 
           SAMGIO.cpp SAMGIO.hpp 
-          FileIO.cpp FileIO.hpp 
-          IOStream.cpp IOStream.hpp )
+          FileIO.cpp FileIO.hpp  )
 
-add_executable( matrixConvert.exe matrixConvert.cpp PetSCIO.cpp MatlabIO.cpp MatrixMarketIO.cpp SAMGIO.cpp FileIO.cpp IOStream.cpp )
-add_executable( vectorConvert.exe vectorConvert.cpp PetSCIO.cpp MatlabIO.cpp MatrixMarketIO.cpp SAMGIO.cpp FileIO.cpp IOStream.cpp )
+add_executable( matrixConvert.exe matrixConvert.cpp PetSCIO.cpp MatlabIO.cpp MatrixMarketIO.cpp SAMGIO.cpp FileIO.cpp )
+add_executable( vectorConvert.exe vectorConvert.cpp PetSCIO.cpp MatlabIO.cpp MatrixMarketIO.cpp SAMGIO.cpp FileIO.cpp )
 target_link_libraries( matrixConvert.exe ${PROJECT_NAME} )
 target_link_libraries( vectorConvert.exe ${PROJECT_NAME} )
 
