add mmio to cmakelists for installation

--- a/scai/lama/io/CMakeLists.txt
+++ b/scai/lama/io/CMakeLists.txt
@@ -38,10 +38,11 @@ scai_project (
 
     CLASSES
         
-        XDRFileStream
-        IOUtils
         FileStream
         IOStream
+        IOUtils
+        XDRFileStream
+        mmio
 
     HEADERS
 
