[all|examples] Changed Makefile and run_all-scipts to work on MacOS X

--- a/scai/examples_Makefile.in
+++ b/scai/examples_Makefile.in
@@ -20,7 +20,7 @@ ifdef SCAI_LIBS
 	MODULE_LIB = -L. ${M_LIBS}
 endif
 
-LD_FLAGS = ${SCAI_LD_FLAGS} ${LINK_LIBRARY} -Wl,-rpath=${SCAI_ROOT}/lib:${SCAI_CUDA_LIBRARY_PATH}
+LD_FLAGS = ${SCAI_LD_FLAGS} ${LINK_LIBRARY} -Wl,-rpath,${SCAI_ROOT}/lib:${SCAI_CUDA_LIBRARY_PATH}
 
 All: ${M_SO} ${SCAI_EXECUTABLES} ${SCAI_MODULES}
 
