IO redesigned, tests adapted

--- a/scai/lama/io/CMakeLists.txt
+++ b/scai/lama/io/CMakeLists.txt
@@ -44,8 +44,15 @@ scai_project (
         XDRFileStream
         mmio
 
+        FileIO
+        SAMGIO
+        MatrixMarketIO
+        PETScIO
+        MatlabIO
+
     HEADERS
 
+        CRTPFileIO
         FileType
 
     ADD_PARENT_SCOPE
