--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -66,7 +66,7 @@ scai_project (
         MaxNormTest
         NormTest
         ScalarTest
-        StorageIOTest
+        FileIOTest
         VectorTest
         VersionTest
     )
