--- a/scai/logging/CMakeLists.txt
+++ b/scai/logging/CMakeLists.txt
@@ -149,6 +149,11 @@ enable_testing()
 add_test ( logging_test test/test.sh )
 ## end subdir test
 
+### set link directories ###
+if ( WIN32 )
+  link_directories ( ${Boost_LIBRARY_DIRS} )
+endif ( WIN32 )
+
 ### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
