--- a/scai/common/test/cuda/CMakeLists.txt
+++ b/scai/common/test/cuda/CMakeLists.txt
@@ -46,7 +46,7 @@ scai_project (
         CUDAKernel
 )
 
-include_directories ( ${SCAI_BOOST_INCLUDE_DIR} )
+include_directories ( ${BOOST_INCLUDE_DIR} )
 
 cuda_add_executable ( commonCUDATest ${CUDA_SOURCES} ${CXX_SOURCES} )
 
