--- a/scai/tasking/test/cuda/CMakeLists.txt
+++ b/scai/tasking/test/cuda/CMakeLists.txt
@@ -45,7 +45,7 @@ scai_project (
         CUDAKernel
 )
 
-include_directories ( ${SCAI_BOOST_INCLUDE_DIR} )
+include_directories ( ${BOOST_INCLUDE_DIR} )
 
 cuda_add_executable ( taskingCUDATest ${CUDA_SOURCES} ${CXX_SOURCES} )
 
