--- a/scai/kregistry/test/CMakeLists.txt
+++ b/scai/kregistry/test/CMakeLists.txt
@@ -40,7 +40,7 @@ set ( CXX_SOURCES
       TraitTest  
 )
 
-include_directories ( ${SCAI_BOOST_INCLUDE_DIR} )
+include_directories ( ${BOOST_INCLUDE_DIR} )
 
 add_executable ( kregistryTest ${CXX_SOURCES} )
 
