--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -72,7 +72,7 @@ endif ( NOT SCAI_COMPLETE_BUILD )
 
 ## Use Boost if BUILD_TEST is enabled
 if ( BUILD_TEST )
-    include( Package/Boost )
+    include( Package/BoostTest )
 endif ( BUILD_TEST )
 
 ### include all search packages
